# rag_project

./: README.md  pyproject.toml
notebooks/: 1.Components.ipynb  2.RAGCeption.ipynb
