[tool.poetry]
name = "rag-from-scratch"
version = "0.1.0"
description = ""
authors = ["Jefferson Qiu <jeffersonqiu1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
openai = "^1.33.0"
langchain-community = "^0.2.4"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.8"
langchainhub = "^0.1.18"
chromadb = "^0.5.0"
langchain = "^0.2.3"
langchain-chroma = "^0.1.1"
wikipedia = "^1.4.0"
giskard = { extras = ["llm"], version = "^2.14.0" }
pypdf = "^4.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
